Fixed remaining placeholders

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d6099a2a31249ffb73d1592d4537d70",
+       "model_id": "23b9aa84900247b795866ed3be0dd9e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b427a1bf8554652acd66a37e44a01ad",
+       "model_id": "2a10e21a27554076b40fec10e98f7c55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "060e32c28fbf42a885b949fb39f3926b",
+       "model_id": "c26b62df11494ad9a11f83922e1422a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "607bbbc65e024c72a4f2fa45bb370f28",
+       "model_id": "69328ce3955043aea95bd005fdf5617a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +233,7 @@
     "    scale_y = max(scale_y, 0.05)\n",
     "    scale_z = max(scale_z, 0.05)\n",
     "    scales = torch.tensor([[scale_x, scale_y, scale_z]], dtype=torch.float32, device=device)\n",
-    "    skews= torch.tensor([[skew_x, skew_y, skew_z]], dtype=torch.float32, device=device)\n",
+    "    skew= torch.tensor([[skew_x, skew_y, skew_z]], dtype=torch.float32, device=device)\n",
     "    # Rotación (representada como un cuaternión)\n",
     "    rot_length = np.sqrt(rot_x**2 + rot_y**2 + rot_z**2 + rot_w**2)\n",
     "    if rot_length > 0.001:  # Asegurar que no sea casi cero\n",
@@ -253,7 +253,7 @@
     "    \n",
     "    colors_precomp = torch.tensor([[color_r, color_g, color_b]], dtype=torch.float32, device=device)\n",
     "    \n",
-    "    return means3D, scales, skews, rotations, opacities, colors_precomp\n",
+    "    return means3D, scales, skew, rotations, opacities, colors_precomp\n",
     "# Función para renderizar la escena\n",
     "def render_scene(\n",
     "    # Cámara\n",
@@ -266,6 +266,7 @@
     "    pos_x=0.0, pos_y=0.0, pos_z=0.0,\n",
     "    scale_x=0.2, scale_y=0.2, scale_z=0.2,  # Valores más grandes por defecto\n",
     "    rot_x=0.0, rot_y=0.0, rot_z=0.0, rot_w=1.0,\n",
+    "    skew_x=0,skew_y=0,skew_z=0,\n",
     "    opacity=1.0,\n",
     "    \n",
     "    # Visualización\n",
@@ -291,12 +292,13 @@
     "        rasterizer = GaussianRasterizer(raster_settings)\n",
     "        \n",
     "        # Crear gaussianas\n",
-    "        means3D, scales, skews, rotations, opacities, colors_precomp= create_gaussians(\n",
+    "        means3D, scales, skew, rotations, opacities, colors_precomp= create_gaussians(\n",
     "            pos_x, pos_y, pos_z, \n",
     "            scale_x, scale_y, scale_z, \n",
     "            rot_x, rot_y, rot_z, rot_w, \n",
     "            opacity, \n",
-    "            color_r, color_g, color_b\n",
+    "            color_r, color_g, color_b,\n",
+    "            skew_x, skew_y, skew_z\n",
     "        )\n",
     "        \n",
     "        # Proyectar puntos 3D a 2D\n",
@@ -306,7 +308,7 @@
     "        print(f\"means3D: {means3D}\")\n",
     "        print(f\"means2D: {means2D}\")\n",
     "        print(f\"scales: {scales}\")\n",
-    "        print(f\"skews: {skews}\")\n",
+    "        print(f\"skew: {skew}\")\n",
     "        print(f\"opacities: {opacities}\")\n",
     "        print(f\"colors_precomp: {colors_precomp}\")\n",
     "        \n",
@@ -318,7 +320,7 @@
     "            colors_precomp=colors_precomp,\n",
     "            scales=scales,\n",
     "            rotations=rotations,\n",
-    "            skews=skews\n",
+    "            skews=skew\n",
     "        )\n",
     "        \n",
     "        # Mostrar imagen\n",
@@ -401,9 +403,9 @@
     "    scale_z = FloatSlider(value=0.2, min=0.05, max=1.0, step=0.01, description='Escala Z:')\n",
     "    \n",
     "\n",
-    "    skew_x = FloatSlider(value=0.2, min=0.05, max=1.0, step=0.01, description='Skew X:')\n",
-    "    skew_y = FloatSlider(value=0.2, min=0.05, max=1.0, step=0.01, description='Skew Y:')\n",
-    "    skew_z = FloatSlider(value=0.2, min=0.05, max=1.0, step=0.01, description='Skew Z:')\n",
+    "    skew_x = FloatSlider(value=0.2, min=-1.0, max=1.0, step=0.01, description='Skew X:')\n",
+    "    skew_y = FloatSlider(value=0.2, min=-1.0, max=1.0, step=0.01, description='Skew Y:')\n",
+    "    skew_z = FloatSlider(value=0.2, min=-1.0, max=1.0, step=0.01, description='Skew Z:')\n",
     "\n",
     "    # Para simplificar, usamos controles más simples para la rotación\n",
     "    rot_x = FloatSlider(value=0.0, min=-1.0, max=1.0, step=0.1, description='Rot X:')\n",
@@ -435,6 +437,7 @@
     "        pos_x=pos_x, pos_y=pos_y, pos_z=pos_z,\n",
     "        scale_x=scale_x, scale_y=scale_y, scale_z=scale_z,\n",
     "        rot_x=rot_x, rot_y=rot_y, rot_z=rot_z, rot_w=rot_w,\n",
+    "        skew_x=skew_x,skew_y=skew_y,skew_z=skew_z,\n",
     "        opacity=opacity,\n",
     "        color_r=color_r, color_g=color_g, color_b=color_b,\n",
     "        bg_r=bg_r, bg_g=bg_g, bg_b=bg_b,\n",
@@ -453,6 +456,7 @@
     "    gaussian_tab = widgets.VBox([\n",
     "        widgets.HBox([pos_x, pos_y, pos_z]),\n",
     "        widgets.HBox([scale_x, scale_y, scale_z]),\n",
+    "        widgets.HBox([skew_x, skew_y, skew_z]),\n",
     "        widgets.HBox([rot_x, rot_y, rot_z, rot_w]),\n",
     "        opacity\n",
     "    ])\n",
